--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- OG -->
-		<meta property="og:url" content="https://sugarchain.org" />
+		<meta property="og:url" content="https://clockspeed.org" />
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="Sugarchain" />
+		<meta property="og:title" content="Clockspeed" />
 		<meta property="og:description" content="one-CPU-one-vote, the world's fastest PoW blockchain" />
 		<meta property="og:image" content="/og_image.jpg" />
 
 		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:title" content="Sugarchain" />
+		<meta name="twitter:title" content="Clockspeed" />
 		<meta name="twitter:description" content="one-CPU-one-vote, the world's fastest PoW blockchain" />
-		<meta name="twitter:site" content="@sugarchain_dev" />
-		<meta name="twitter:creator" content="@sugarchain_dev" />
-		<meta name="twitter:image" content="https://sugarchain.org/og_image.jpg" />
+		<meta name="twitter:site" content="@clockspeed_dev" />
+		<meta name="twitter:creator" content="@clockspeed_dev" />
+		<meta name="twitter:image" content="https://clockspeed.org/og_image.jpg" />
 
-		<title>Sugarchain</title>
+		<title>Clockspeed</title>
 		<link rel="icon" type="image/png" href="logo.png">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
@@ -122,7 +122,7 @@
 				<div class="text-center container">
 					<img src="logo.png" alt="Logo" class="logo mb-2">
 					<h1 class="d-block mb-2">
-						Sugarchain
+						Clockspeed
 					</h1>
 					<h4>
 						one-CPU-one-vote, the world's fastest PoW blockchain
@@ -132,20 +132,20 @@
 					</div>
 					<div class="links mb-2">
 						<a href="#specs" class="scroll">SPECS</a>
-						<a href="https://github.com/sugarchain-project/sugarchain/releases/latest" target="_blank">DOWNLOAD</a>
-						<a href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/latest" target="_blank">CPUMINER</a>
-						<a href="https://github.com/sugarchain-project/team-contacts/blob/master/README.md" target="_blank">TEAM</a>
+						<a href="https://github.com/clockspeed-project/clockspeed/releases/latest" target="_blank">DOWNLOAD</a>
+						<a href="https://github.com/cryptozeny/cpuminer-opt-clockspeed/releases/latest" target="_blank">CPUMINER</a>
+						<a href="https://github.com/clockspeed-project/team-contacts/blob/master/README.md" target="_blank">TEAM</a>
 						<a href="#contacts" class="scroll">CONTACTS</a>
 						<a href="#exchange" class="scroll">TRADE</a>
 					</div>
 					<div class="markets mb-2">
-						<a href="https://coinmarketcap.com/currencies/sugarchain/" target="_blank" class="img-link">
+						<a href="https://coinmarketcap.com/currencies/clockspeed/" target="_blank" class="img-link">
 							<img src="cmclogo.png">
 						</a>
-						<a href="https://www.coingecko.com/en/coins/sugarchain" target="_blank" class="img-link">
+						<a href="https://www.coingecko.com/en/coins/clockspeed" target="_blank" class="img-link">
 							<img src="coingecko.png">
 						</a>
-						<a href="https://coinpaprika.com/coin/sugar-sugarchain/" target="_blank" class="img-link">
+						<a href="https://coinpaprika.com/coin/clock-clockspeed/" target="_blank" class="img-link">
 							<img src="paprika.svg">
 						</a>
 					</div>
@@ -164,7 +164,7 @@
 							<!-- ZERO-MD -->
 							<!-- If you want to edit the contents of website, please edit this MD file. -->
 							<!-- "no-shadow" Enable Google Translate: https://github.com/zerodevx/zero-md/issues/32#issuecomment-659288445 -->
-							<zero-md no-shadow src="https://raw.githubusercontent.com/sugarchain-project/sugarchain-project.github.io/master/README.md"></zero-md>
+							<zero-md no-shadow src="https://raw.githubusercontent.com/clockspeed-project/clockspeed-project.github.io/master/README.md"></zero-md>
 
 
 							<!-- END - WEBSITE -->
@@ -175,19 +175,19 @@
 		</section>
 
 		<footer id="contacts" class="text-center">
-			If you are interested in the Sugarchain project, come to our community.
+			If you are interested in the Clockspeed project, come to our community.
 			<br>
-			<a href="https://t.me/sugarchain" target="_blank" rel="nofollow">Telegram</a>
+			<a href="https://t.me/clockspeed" target="_blank" rel="nofollow">Telegram</a>
 			|
-			<a href="https://twitter.com/sugarchain_dev" target="_blank" rel="nofollow">Twitter</a>
+			<a href="https://twitter.com/clockspeed_dev" target="_blank" rel="nofollow">Twitter</a>
 			|
-			<a href="https://forum.sugarchain.org" target="_blank" rel="nofollow">Forum</a>
+			<a href="https://forum.clockspeed.org" target="_blank" rel="nofollow">Forum</a>
 			|
-			<a href="https://chat.sugar.wtf" target="_blank" rel="nofollow">Rocket.Chat</a>
+			<a href="https://chat.clock.wtf" target="_blank" rel="nofollow">Rocket.Chat</a>
 			|
 			<a href="https://bitcointalk.org/index.php?topic=5177722.0" target="_blank" rel="nofollow">Bitcointalk</a>
 			|
-			<a href="https://www.reddit.com/r/Sugarchain" target="_blank" rel="nofollow">Reddit</a>
+			<a href="https://www.reddit.com/r/Clockspeed" target="_blank" rel="nofollow">Reddit</a>
 		</footer>
 
 		<script>
@@ -195,9 +195,9 @@
 
 			function stats(first = false) {
 				Promise.resolve($.ajax({
-					url: "https://api.sugarchain.org/info",
+					url: "https://api.clockspeed.org/info",
 				})).then(function(data) {
-					$("#height .current").attr("href", "https://1explorer.sugarchain.org/block/" + data["result"]["bestblockhash"])
+					$("#height .current").attr("href", "https://1explorer.clockspeed.org/block/" + data["result"]["bestblockhash"])
 					$("#height .current").text(data["result"]["blocks"])
 					if (first) {
 						height_start = data["result"]["blocks"]
