--- a/explorer/index.html
+++ b/explorer/index.html
@@ -15,7 +15,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
 		<script src="https://code.highcharts.com/highcharts.src.js"></script>
 		
-		<link rel="icon" type="image/png" href="https://sugarchain.org/logo.png">
+		<link rel="icon" type="image/png" href="https://clockspeed.org/logo.png">
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
 		<style>
@@ -78,7 +78,7 @@
 			}
 		</style>
 		<title>Blockchain Explorer</title>
-		<meta name="description" content="Sugarchain Blockchain Explorer">
+		<meta name="description" content="Clockspeed Blockchain Explorer">
 	</head>
 	<body>
 		<!-- Navbar -->
@@ -269,7 +269,7 @@
 		<!-- Footer :3 -->
 		<footer class="mb-3">
 			<div class="container text-center">
-				Made with <span class="entypo heart text-danger"></span> by <a target="_blank" href="https://github.com/sugarchain-project/blockchain-explorer">Volbil</a>
+				Made with <span class="entypo heart text-danger"></span> by <a target="_blank" href="https://github.com/clockspeed-project/blockchain-explorer">Volbil</a>
 			</div>
 		</footer>
 
@@ -277,12 +277,12 @@
 		<script>
 			// Config
 			var networksConfigs = {
-				'SUGAR': {
-					'name': 'Main Network (SUGAR)',
-					'api': 'https://api.sugarchain.org',
-					'ticker': 'SUGAR',
+				'CLOCK': {
+					'name': 'Main Network (CLOCK)',
+					'api': 'https://api.clockspeed.org',
+					'ticker': 'CLOCK',
 					'decimals': 8,
-					'hrp': 'sugar'
+					'hrp': 'clock'
 				}
 			}
 
@@ -679,7 +679,7 @@
 
 			// Set window title
 			function setTitle(title) {
-				document.title = title + ' | Sugar Explorer';
+				document.title = title + ' | Clock Explorer';
 			}
 
 			// Bocks request
