--- a/wallet/index.html
+++ b/wallet/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="/cdn/wizardry.min.css">
 		<link rel="stylesheet" href="/cdn/entypo/entypo.css">
 
-		<link rel="icon" type="image/png" href="https://clockspeed.org/logo.png">
+		<link rel="icon" type="image/png" href="https://clockspeed-project.github.io/logo.png">
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -195,7 +195,7 @@
 									<a class="nav-link tab-link" data-tab-name="wallet-send" data-tab-family="wallet-block" href="#" tkey="send"></a>
 								</li>
 								<li class="nav-item mr-2">
-									<a id="history-link" class="nav-link" target="_blank" href="https://clockspeed.org/explorer/#/address/" tkey="history"></a>
+									<a id="history-link" class="nav-link" target="_blank" href="https://clockspeed-project.github.io/explorer/#/address/" tkey="history"></a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link tab-link" data-tab-name="wallet-keys" data-tab-family="wallet-block" href="#" tkey="keys"></a>
@@ -435,7 +435,7 @@
 					'uri': 'clockspeed:',
 					'title': 'Clock Wallet',
 					'name': 'Main Network (CLOCK)',
-					'api': 'https://api.clockspeed.org',
+					'api': 'https://api.clockspeed-project.github.io',
 					'ticker': 'CLOCK',
 					'decimals': 8,
 					'fee': 0.00001,
@@ -456,10 +456,10 @@
 			// Explorer links
 			var blockExplorer = {
 				'address': function(address) {
-					return 'https://clockspeed.org/explorer/#/address/' + address + '/' + getConfig()['ticker']
+					return 'https://clockspeed-project.github.io/explorer/#/address/' + address + '/' + getConfig()['ticker']
 				},
 				'tx': function(tx) {
-					return 'https://clockspeed.org/explorer/#/transaction/' + tx + '/' + getConfig()['ticker']
+					return 'https://clockspeed-project.github.io/explorer/#/transaction/' + tx + '/' + getConfig()['ticker']
 				}
 			}
 
