--- a/explorer/index.html
+++ b/explorer/index.html
@@ -15,7 +15,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
 		<script src="https://code.highcharts.com/highcharts.src.js"></script>
 		
-		<link rel="icon" type="image/png" href="https://clockspeed.org/logo.png">
+		<link rel="icon" type="image/png" href="https://clockspeed-project.github.io/logo.png">
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
 		<style>
@@ -279,7 +279,7 @@
 			var networksConfigs = {
 				'CLOCK': {
 					'name': 'Main Network (CLOCK)',
-					'api': 'https://api.clockspeed.org',
+					'api': 'https://api.clockspeed-project.github.io',
 					'ticker': 'CLOCK',
 					'decimals': 8,
 					'hrp': 'clock'
