--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		<meta property="og:url" content="https://clockspeed-project.github.io" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Clockspeed" />
-		<meta property="og:description" content="one-CPU-one-vote, the world's fastest PoW blockchain" />
+		<meta property="og:description" content="Clockspeed is a cryptocurrency fastest PoW blockchain." />
 		<meta property="og:image" content="/og_image.jpg" />
 
 		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Clockspeed" />
-		<meta name="twitter:description" content="one-CPU-one-vote, the world's fastest PoW blockchain" />
+		<meta name="twitter:description" content="Clockspeed is a cryptocurrency fastest PoW blockchain." />
 		<meta name="twitter:site" content="@clockspeed_dev" />
 		<meta name="twitter:creator" content="@clockspeed_dev" />
 		<meta name="twitter:image" content="https://clockspeed-project.github.io/og_image.jpg" />
@@ -125,7 +125,7 @@
 						Clockspeed
 					</h1>
 					<h4>
-						one-CPU-one-vote, the world's fastest PoW blockchain
+						Clockspeed is a cryptocurrency fastest PoW blockchain.
 					</h4>
 					<div id="height" class="d-block mb-2">
 						Current height is <span class="loading">loading...</span> <a href="#" class="current d-none" target="_blank">0</a> (<span class="passed">0</span> blocks since you open this page)
